@@ -3392,94 +3392,6 @@ int LuaOpenGL::UnsafeState(lua_State* L)
 
 /******************************************************************************/
 
-int LuaOpenGL::CreateList(lua_State* L)
-{
-	const int args = lua_gettop(L); // number of arguments
-	if ((args < 1) || !lua_isfunction(L, 1)) {
-		luaL_error(L,
-			"Incorrect arguments to gl.CreateList(func [, arg1, arg2, etc ...])");
-	}
-
-	// generate the list id
-	const GLuint list = glGenLists(1);
-	if (list == 0) {
-		lua_pushnumber(L, 0);
-		return 1;
-	}
-
-	// save the current state
-	const bool origDrawingEnabled = IsDrawingEnabled(L);
-	SetDrawingEnabled(L, true);
-
-	// build the list with the specified lua call/args
-	glNewList(list, GL_COMPILE);
-	SMatrixStateData prevMSD = GetLuaContextData(L)->glMatrixTracker.PushMatrixState(true);
-	const int error = lua_pcall(L, (args - 1), 0, 0);
-	SMatrixStateData matData = GetLuaContextData(L)->glMatrixTracker.GetMatrixState();
-	GetLuaContextData(L)->glMatrixTracker.PopMatrixState(prevMSD, false);
-	glEndList();
-
-	if (error != 0) {
-		glDeleteLists(list, 1);
-		LOG_L(L_ERROR, "gl.CreateList: error(%i) = %s",
-				error, lua_tostring(L, -1));
-		lua_pushnumber(L, 0);
-	}
-	else {
-		CLuaDisplayLists& displayLists = CLuaHandle::GetActiveDisplayLists(L);
-		const unsigned int index = displayLists.NewDList(list, matData);
-		lua_pushnumber(L, index);
-	}
-
-	// restore the state
-	SetDrawingEnabled(L, origDrawingEnabled);
-
-	return 1;
-}
-
-
-int LuaOpenGL::CallList(lua_State* L)
-{
-	CheckDrawingEnabled(L, __func__);
-	const unsigned int listIndex = luaL_checkint(L, 1);
-	const CLuaDisplayLists& displayLists = CLuaHandle::GetActiveDisplayLists(L);
-	const unsigned int dlist = displayLists.GetDList(listIndex);
-
-	if (dlist == 0)
-		return 0;
-
-	SMatrixStateData matrixStateData = displayLists.GetMatrixState(listIndex);
-	const int error = GetLuaContextData(L)->glMatrixTracker.ApplyMatrixState(matrixStateData);
-
-	if (error == 0) {
-		glCallList(dlist);
-		return 0;
-	}
-
-	luaL_error(L, "Matrix stack %sflow in gl.CallList", (error > 0) ? "over" : "under");
-	return 0;
-}
-
-
-int LuaOpenGL::DeleteList(lua_State* L)
-{
-	if (lua_isnil(L, 1))
-		return 0;
-
-	const unsigned int listIndex = (unsigned int)luaL_checkint(L, 1);
-	CLuaDisplayLists& displayLists = CLuaHandle::GetActiveDisplayLists(L);
-	const unsigned int dlist = displayLists.GetDList(listIndex);
-	displayLists.FreeDList(listIndex);
-
-	if (dlist != 0)
-		glDeleteLists(dlist, 1);
-
-	return 0;
-}
-
-
-/******************************************************************************/
-
 int LuaOpenGL::Flush(lua_State* L)
 {
 	CheckDrawingEnabled(L, __func__);
